--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <div class="line"></div>
                     </div>
 
-                    <div class="d-flex w-25 mx-auto justify-content-between my-4">
+                    <div class="d-flex w-25 mx-auto justify-content-between my-4 socials">
                         <img src="./img/Google - jpeg 0.png" alt="" class="w-25">
                         <img src="./img/Facebook - png 0.png" class="w-25" alt="">
                         <img src="./img/Apple - png 0.png" class="w-25" alt="">
