--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
 
                     <!-- foot notes -->
-                    <div>
+                    <div class="req">
                         <p>Password requirements:</p>
                         <ul>
                             <li>Must be at least 8 characters long.</li>
