--- a/success.html
+++ b/success.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/header-footer-loggedin.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/signup.css">
     <title></title>
 
 <body>
@@ -149,7 +149,7 @@
         <div class="">
             Your account has been created. Kindly click on continue to explore our services.
         </div>
-        <button class="btn btn-primary mt-5 btn-success btn-outline-light w-25 c" type="button">Continue</button>
+        <a href=""><button class="btn btn-primary mt-5 btn-success btn-outline-light w-25 c" type="button">Continue</button></a>
     </section>
 
 
@@ -240,7 +240,7 @@
         integrity="sha512-2rNj2KJ+D8s1ceNasTIex6z4HWyOnEYLVC3FigGOmyQCZc2eBXKgOxQmo3oKLHyfcj53uz4QMsRCWNbLd32Q1g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/signup.js"></script>
 </body>
 
 </html>
